...
                Column(
                  mainAxisSize: MainAxisSize.max,
                  children: [
                    ClipRRect(
                      borderRadius: BorderRadius.circular(8.0),
                      child: Image.asset(
                        key: ValueKey('Image_dffi'),
                        'assets/images/ChatGPT_Image_Nov_10,_2025,_09_46_37_PM.png',
                        width: 319.6,
                        height: 171.8,
                        fit: BoxFit.cover,
                      ),
                    ),
...
                ),
                Align(
                  alignment: AlignmentDirectional(0.0, -0.38),
                  child: Container(
                    width: 300.0,
                    child: TextFormField(
                      key: ValueKey('Email_46fn'),
                      controller: _model.emailTextController,
                      focusNode: _model.emailFocusNode,
                      onChanged: (_) => EasyDebounce.debounce(
                        '_model.emailTextController',
                        Duration(milliseconds: 2000),
                        () => safeSetState(() {}),
...
                ),
                Align(
                  alignment: AlignmentDirectional(0.04, -0.14),
                  child: Container(
                    width: 300.0,
                    child: TextFormField(
                      key: ValueKey('CreatePass_vgie'),
                      controller: _model.createPassTextController,
                      focusNode: _model.createPassFocusNode,
                      autofocus: false,
                      textInputAction: TextInputAction.next,
                      obscureText: !_model.createPassVisibility,
                      decoration: InputDecoration(
...
                ),
                Align(
                  alignment: AlignmentDirectional(0.04, 0.1),
                  child: Container(
                    width: 300.0,
                    child: TextFormField(
                      key: ValueKey('Confirmpass_usja'),
                      controller: _model.confirmpassTextController,
                      focusNode: _model.confirmpassFocusNode,
                      autofocus: false,
                      textInputAction: TextInputAction.done,
                      obscureText: !_model.confirmpassVisibility,
                      decoration: InputDecoration(
...
                Align(
                  alignment: AlignmentDirectional(-0.14, 0.56),
                  child: Padding(
                    padding:
                        EdgeInsetsDirectional.fromSTEB(40.0, 0.0, 20.0, 0.0),
                    child: FFButtonWidget(
                      key: ValueKey('Signupbutton_g1d9'),
                      onPressed: () async {
                        logFirebaseEvent('SIGNUP_PAGE_Signupbutton_ON_TAP');
                        logFirebaseEvent('Signupbutton_auth');
                        GoRouter.of(context).prepareAuthEvent();
                        if (_model.createPassTextController.text !=
                            _model.confirmpassTextController.text) {
...

                        logFirebaseEvent('Signupbutton_navigate_to');

                        context.goNamedAuth(
                            ProfileCreationWidget.routeName, context.mounted);
                      },
                      text: 'Sign Up',
                      options: FFButtonOptions(
                        width: 150.0,
                        height: 40.0,
                        padding: EdgeInsetsDirectional.fromSTEB(
                            16.0, 0.0, 16.0, 0.0),
                        iconPadding:
...
