...
                                  'BAND_PROFILE_R_E_A_D_O_N_L_Y_Icon_etc42z');
                              logFirebaseEvent('Icon_navigate_to');

                              context.goNamed(SearchWidget.routeName);
                            },
                            child: Icon(
                              key: ValueKey('Icon_ud1x'),
                              Icons.arrow_back,
                              color: FlutterFlowTheme.of(context).primary,
                              size: 30.0,
                            ),
                          ),
                        ],
...
                              ),
                              borderRadius: BorderRadius.circular(24.0),
                            ),
                          ),
                        if (_model.isFollowing ? true : false)
                          FFButtonWidget(
                            key: ValueKey('Button_alwp'),
                            onPressed: () async {
                              logFirebaseEvent(
                                  'BAND_PROFILE_R_E_A_D_O_N_L_Y_UNFOLLOW_BT');
                              logFirebaseEvent('Button_backend_call');

                              await currentUserReference!.update({
...
                                ),
                              });
                              logFirebaseEvent('Button_update_page_state');
                              _model.isFollowing = false;
                              safeSetState(() {});
                            },
                            text: 'Unfollow',
                            options: FFButtonOptions(
                              width: 100.0,
                              height: 30.0,
                              padding: EdgeInsetsDirectional.fromSTEB(
                                  16.0, 0.0, 16.0, 0.0),
                              iconPadding: EdgeInsetsDirectional.fromSTEB(
...
                    ),
                    Row(
                      mainAxisSize: MainAxisSize.max,
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        Text(
                          key: ValueKey('Text_5ah7'),
                          'Followers:',
                          style: FlutterFlowTheme.of(context)
                              .titleSmall
                              .override(
                                font: GoogleFonts.jaldi(
                                  fontWeight: FlutterFlowTheme.of(context)
...
                                        .fontStyle,
                                  ),
                              indicatorColor:
                                  FlutterFlowTheme.of(context).primary,
                              tabs: [
                                Tab(
                                  text: 'Gigs',
                                ),
                                Tab(
                                  text: 'Posts',
                                ),
                                Tab(
                                  text: 'Info',
...
                                                      (context, listViewIndex) {
                                                    final listViewGigsRecord =
                                                        listViewGigsRecordList[
                                                            listViewIndex];
                                                    return Container(
                                                      key: ValueKey(
                                                          'GigPostComponent_ut4l'),
                                                      child: wrapWithModel(
                                                        model: _model
                                                            .gigPostComponentModels
                                                            .getModel(
                                                          widget.bandRef!.id,
                                                          listViewIndex,
...
