...
                                                .cast<BandsRecord>();
                                            safeSetState(() {});
                                          },
                                        );
                                      }
                                      return TextFormField(
                                        key: ValueKey('TextField_8996'),
                                        controller: _model.textController,
                                        focusNode: _model.textFieldFocusNode,
                                        autofocus: false,
                                        obscureText: false,
                                        decoration: InputDecoration(
                                          isDense: true,
...
                                                                .toList(),
                                                            FFAppState()
                                                                .showActiveGigsOnly) ??
                                                        true,
                                                    child: Container(
                                                      key: ValueKey(
                                                          'compactBand_y75d'),
                                                      child: CompactBandWidget(
                                                        key: Key(
                                                            'Keyimi_${allBandsIndex}_of_${allBandsBandsRecordList.length}'),
                                                        bandRef:
                                                            allBandsBandsRecord
                                                                .reference,
...
