import 'dart:io';
import 'package:flutter/gestures.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:google_fonts/google_fonts.dart';
import 'package:integration_test/integration_test.dart';
import 'package:neighborhood_noise/flutter_flow/flutter_flow_icon_button.dart';
import 'package:neighborhood_noise/flutter_flow/flutter_flow_widgets.dart';
import 'package:neighborhood_noise/flutter_flow/flutter_flow_theme.dart';
import 'package:neighborhood_noise/index.dart';
import 'package:neighborhood_noise/main.dart';
import 'package:neighborhood_noise/flutter_flow/flutter_flow_util.dart';

import 'package:provider/provider.dart';
import 'package:neighborhood_noise/backend/firebase/firebase_config.dart';
import 'package:neighborhood_noise/auth/firebase_auth/auth_util.dart';
import 'package:firebase_auth/firebase_auth.dart';

void main() async {
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  setUpAll(() async {
    await initFirebase();
  });

  setUp(() async {
    await authManager.signOut();
    FFAppState.reset();
    final appState = FFAppState();
    await appState.initializePersistedState();
  });

  group('US4', () {
    testWidgets('US4 -Navigate To Band Profile and Follow Band -  Trekker',
        (WidgetTester tester) async {
      _overrideOnError();
      await FirebaseAuth.instance.signInWithEmailAndPassword(
          email: 'trek@mail.com', password: 'password');
      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: const MyApp(),
      ));
      await GoogleFonts.pendingFonts();

      await tester.pumpAndSettle(const Duration(milliseconds: 3000));
      await tester.tap(find.byIcon(Icons.search_sharp));
      await tester.pumpAndSettle(const Duration(milliseconds: 1000));
      await tester.pumpAndSettle(const Duration(milliseconds: 1000));
      await tester.tap(find.descendant(
        of: find.byKey(const ValueKey('compactBand_y75d')),
        matching: find.byKey(const ValueKey('Image_l2r7')),
      ));
      await tester.pumpAndSettle(const Duration(milliseconds: 2000));
      expect(find.byKey(const ValueKey('Text_5ah7')), findsWidgets);
      await tester.tap(find.byKey(const ValueKey('Button_alwp')));
      await tester.pumpAndSettle(const Duration(milliseconds: 1000));
      expect(find.text('Unfollow'), findsOneWidget);
    });

    testWidgets('US4 - Navigate To Gig from Band Profile',
        (WidgetTester tester) async {
      _overrideOnError();
      await FirebaseAuth.instance.signInWithEmailAndPassword(
          email: 'trek@mail.com', password: 'password');
      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: HomePageWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.pumpAndSettle(const Duration(milliseconds: 3000));
      await tester.tap(find.byIcon(Icons.search_sharp));
      await tester.pumpAndSettle(const Duration(milliseconds: 2000));
      await tester.tap(find.byKey(const ValueKey('compactBand_y75d')));
      await tester.pumpAndSettle(const Duration(milliseconds: 1000));
      expect(find.text('Gigs'), findsOneWidget);
      await tester.tap(find.byKey(const ValueKey('GigPostComponent_ut4l')));
      await tester.pumpAndSettle(const Duration(milliseconds: 1000));
      expect(find.text('Gig Description'), findsOneWidget);
    });

    testWidgets('US4 - Navigate back to search page from band profile page',
        (WidgetTester tester) async {
      _overrideOnError();
      await FirebaseAuth.instance.signInWithEmailAndPassword(
          email: 'trek@mail.com', password: 'password');
      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: SearchWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.pumpAndSettle(const Duration(milliseconds: 2000));
      await tester.tap(find.byKey(const ValueKey('compactBand_y75d')));
      await tester.pumpAndSettle(const Duration(milliseconds: 1000));
      expect(find.byKey(const ValueKey('Text_5ah7')), findsOneWidget);
      await tester.tap(find.byKey(const ValueKey('Icon_ud1x')));
      await tester.pumpAndSettle(
        const Duration(milliseconds: 2000),
        EnginePhase.sendSemanticsUpdate,
        const Duration(milliseconds: 5000),
      );
      expect(find.byKey(const ValueKey('TextField_8996')), findsOneWidget);
    });
  });

  group('User Story 5: Band Creation', () {
    testWidgets('Navigate to Band Tab without a Band',
        (WidgetTester tester) async {
      _overrideOnError();
      await FirebaseAuth.instance.signInWithEmailAndPassword(
          email: 'loganmcwho@gmail.com', password: 'abcde12345');
      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: NoExistingBandPageWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.tap(find.byKey(const ValueKey('Button_wf9y')));
      await tester.pumpAndSettle(const Duration(milliseconds: 5000));
      expect(find.byKey(const ValueKey('UNDEFINED')), findsWidgets);
    });

    testWidgets('Successful BandCreation', (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: BandCreationWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.enterText(
          find.byKey(const ValueKey('UNDEFINED')), 'LargeMango');
      await tester.enterText(
          find.byKey(const ValueKey('UNDEFINED')), 'Providence');
      await tester.tap(find.byKey(const ValueKey('UNDEFINED')));
      await tester.enterText(
          find.byKey(const ValueKey('UNDEFINED')), 'old man rock');
      await tester.tap(find.byKey(const ValueKey('UNDEFINED')));
      await tester.pumpAndSettle(const Duration(milliseconds: 5000));
      expect(find.byKey(const ValueKey('UNDEFINED')), findsWidgets);
    });

    testWidgets('Not Sufficient Fields', (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: BandCreationWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.tap(find.byKey(const ValueKey('UNDEFINED')));
      expect(find.text('Error'), findsNothing);
    });
  });

  group('US3 - Profile Creation', () {
    testWidgets('Successful Profile creation', (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: SignupWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.enterText(
          find.byKey(const ValueKey('Email_46fn')), 'wassaw@gmail.com');
      await tester.enterText(
          find.byKey(const ValueKey('CreatePass_vgie')), 'password');
      await tester.enterText(
          find.byKey(const ValueKey('Confirmpass_usja')), 'password');
      await tester.pumpAndSettle(
        const Duration(milliseconds: 1000),
        EnginePhase.sendSemanticsUpdate,
        const Duration(milliseconds: 5000),
      );
      expect(find.byKey(const ValueKey('Row_qjf8')), findsOneWidget);
    });

    testWidgets('Unsuccessful Profile creation - Missing Field',
        (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: SignupWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.enterText(
          find.byKey(const ValueKey('Email_46fn')), 'wassaw@gmail.com');
      await tester.enterText(
          find.byKey(const ValueKey('CreatePass_vgie')), 'password');
      await tester.pumpAndSettle(
        const Duration(milliseconds: 1000),
        EnginePhase.sendSemanticsUpdate,
        const Duration(milliseconds: 5000),
      );
      expect(find.byKey(const ValueKey('Image_dffi')), findsOneWidget);
    });
  });

  group('US1', () {
    testWidgets('Successful Login', (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: const MyApp(),
      ));
      await GoogleFonts.pendingFonts();

      await tester.pumpAndSettle(const Duration(milliseconds: 10000));
      await tester.tap(find.text('Sign Up'));
      await tester.pumpAndSettle(const Duration(milliseconds: 5000));
      await tester.enterText(
          find.byKey(const ValueKey('Email_46fn')), 'myemail@gmail.com');
      await tester.enterText(
          find.byKey(const ValueKey('CreatePass_vgie')), 'password');
      await tester.enterText(
          find.byKey(const ValueKey('Confirmpass_usja')), 'password');
      await tester.tap(find.byKey(const ValueKey('Signupbutton_g1d9')));
      await tester.pumpAndSettle(const Duration(milliseconds: 5000));
      expect(find.byKey(const ValueKey('PageTitle_muey')), findsOneWidget);
    });

    testWidgets('Invalid Email Address Format', (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: SignupWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.enterText(
          find.byKey(const ValueKey('Email_46fn')), 'test.email');
      await tester.enterText(
          find.byKey(const ValueKey('CreatePass_vgie')), '123456');
      await tester.enterText(
          find.byKey(const ValueKey('Confirmpass_usja')), '123456');
      await tester.tap(find.byKey(const ValueKey('Signupbutton_g1d9')));
      expect(find.text('error'), findsWidgets);
    });

    testWidgets('Account Already Exists', (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: SignupWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.enterText(
          find.byKey(const ValueKey('Email_46fn')), 'myemail@gmail.com');
      await tester.enterText(
          find.byKey(const ValueKey('CreatePass_vgie')), '123456');
      await tester.enterText(
          find.byKey(const ValueKey('Confirmpass_usja')), '123456');
      await tester.tap(find.byKey(const ValueKey('Signupbutton_g1d9')));
      expect(find.text('error'), findsWidgets);
    });

    testWidgets('Weak Password', (WidgetTester tester) async {
      _overrideOnError();

      await tester.pumpWidget(ChangeNotifierProvider(
        create: (context) => FFAppState(),
        child: MyApp(
          entryPage: SignupWidget(),
        ),
      ));
      await GoogleFonts.pendingFonts();

      await tester.enterText(
          find.byKey(const ValueKey('Email_46fn')), 'myemail@gmail.com');
      await tester.enterText(
          find.byKey(const ValueKey('CreatePass_vgie')), '12');
      await tester.enterText(
          find.byKey(const ValueKey('Confirmpass_usja')), '12');
      await tester.tap(find.byKey(const ValueKey('Signupbutton_g1d9')));
      expect(find.text('error'), findsWidgets);
    });
  });
}

// There are certain types of errors that can happen during tests but
// should not break the test.
void _overrideOnError() {
  final originalOnError = FlutterError.onError!;
  FlutterError.onError = (errorDetails) {
    if (_shouldIgnoreError(errorDetails.toString())) {
      return;
    }
    originalOnError(errorDetails);
  };
}

bool _shouldIgnoreError(String error) {
  // It can fail to decode some SVGs - this should not break the test.
  if (error.contains('ImageCodecException')) {
    return true;
  }
  // Overflows happen all over the place,
  // but they should not break tests.
  if (error.contains('overflowed by')) {
    return true;
  }
  // Sometimes some images fail to load, it generally does not break the test.
  if (error.contains('No host specified in URI') ||
      error.contains('EXCEPTION CAUGHT BY IMAGE RESOURCE SERVICE')) {
    return true;
  }
  // These errors should be avoided, but they should not break the test.
  if (error.contains('setState() called after dispose()')) {
    return true;
  }
  // Web-specific error when interacting with TextInputType.emailAddress
  if (error.contains('setSelectionRange') &&
      error.contains('HTMLInputElement')) {
    return true;
  }

  return false;
}
